fix: ul spacing

--- a/src/assets/input.css
+++ b/src/assets/input.css
@@ -57,7 +57,6 @@ a {
 
 header {
   @apply pt-8 pb-2 mb-8;
-  /* border-bottom: 1px solid #c3abac; */
 }
 
 main {
@@ -78,7 +77,6 @@ article {
 
 main a {
   border-bottom-style: inset;
-  /* border-bottom: 4px solid white; */
   box-shadow: inset 0 -2px 0 white;
 }
 
@@ -120,7 +118,7 @@ code {
 article ul {
   list-style-type: disc;
   list-style-position: outside;
-  margin-left: 1.125rem;
+  margin-left: 1.5rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
@@ -128,7 +126,11 @@ article ul {
 .blog ul {
   list-style-type: disc;
   list-style-position: outside;
-  margin-left: 1.125rem;
+  margin-left: 1.25rem;
+}
+
+.blog ul li h3 {
+  margin-left: -0.25rem;
 }
 
 blockquote {
